--- a/indax.html
+++ b/indax.html
@@ -96,7 +96,7 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="img.1.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Sindhu Bhairavi A</h1>
+            <h1>Mahathhishree M</h1>
             <p>I have an knowledge of machine learning</p>
         </div>
     </header>
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p><b>Hi I'm Sindhu Bhairavi A</b>an enthusiastic fresher with a deep interest in<b> web development</b>.
+            <p><b>Hi I'm Mahathishree M</b>an enthusiastic fresher with a deep interest in<b> web development</b>.
                  She is eager to apply her knowledge and skills to create dynamic and user friendly web applications
                  with a solid understanding of both front-end and back-end technologies she is passionate about
                  building comprehensive solutions that deliver great user experiences.Right now I am also 
@@ -164,14 +164,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Sindhu 2025 Resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.mahathi.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2025 Sindhu Bhairavi A</p>
+        <p>&copy; 2025 Mathishree M</p>
     </footer>
 
     <script>
